Entrega1/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    WRITE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC
Rule 2     auxprogram -> vars auxprogram
Rule 3     auxprogram -> function auxprogram
Rule 4     auxprogram -> empty
Rule 5     array -> ID LFTBRACSQR exp RGTBRACSQR
Rule 6     assignment -> assignmentaux EQUAL expression SEMICOLON
Rule 7     assignment -> assignmentaux EQUAL call SEMICOLON
Rule 8     assignmentaux -> ID
Rule 9     assignmentaux -> array
Rule 10    blockreturn -> LFTBRAC blockreturnaux RGTBRAC
Rule 11    blockreturn -> LFTBRAC blockreturnaux RETURN exp SEMICOLON RGTBRAC
Rule 12    blockreturnaux -> statement blockreturnaux
Rule 13    blockreturnaux -> empty
Rule 14    block -> LFTBRAC blockaux RGTBRAC
Rule 15    blockaux -> statement blockaux
Rule 16    blockaux -> empty
Rule 17    condition -> IF conditionaux
Rule 18    condition -> IF conditionaux ELSE block
Rule 19    conditionaux -> LFTPAREN expression RGTPAREN block ELSEIF conditionaux
Rule 20    conditionaux -> LFTPAREN expression RGTPAREN block
Rule 21    constant -> ID
Rule 22    constant -> array
Rule 23    constant -> TRUE
Rule 24    constant -> FALSE
Rule 25    exp -> term
Rule 26    exp -> term expaux
Rule 27    expaux -> PLUS exp expaux
Rule 28    expaux -> MINUS exp expaux
Rule 29    expaux -> empty
Rule 30    factor -> factoraux constant
Rule 31    factor -> LFTPAREN expression RGTPAREN
Rule 32    factoraux -> PLUS
Rule 33    factoraux -> MINUS
Rule 34    expression -> exp
Rule 35    expression -> expressionaux exp
Rule 36    expressionaux -> AND
Rule 37    expressionaux -> DOUBEQUAL
Rule 38    expressionaux -> NOT
Rule 39    expressionaux -> OR
Rule 40    expressionaux -> LESSTHANEQUAL
Rule 41    expressionaux -> GREATTHANEQUAL
Rule 42    expressionaux -> GREATTHAN
Rule 43    expressionaux -> LESSTHAN
Rule 44    loop -> WHILE LFTPAREN expression RGTPAREN block
Rule 45    write -> PRINT LFTPAREN exp RGTPAREN SEMICOLON
Rule 46    parameter -> type ID
Rule 47    parameter -> type ID COMMA parameter
Rule 48    parameter -> empty
Rule 49    term -> factor termaux
Rule 50    termaux -> MULTIPLICATION term termaux
Rule 51    termaux -> DIVISION term termaux
Rule 52    termaux -> empty
Rule 53    statement -> assignment
Rule 54    statement -> condition
Rule 55    statement -> vars
Rule 56    statement -> loop
Rule 57    statement -> write
Rule 58    statement -> read
Rule 59    statement -> call
Rule 60    type -> INT
Rule 61    type -> FLOAT
Rule 62    type -> CHAR
Rule 63    type -> BOOL
Rule 64    type -> STRING
Rule 65    main -> PRIOMH block
Rule 66    function -> FUNCTION functionaux ID LFTPAREN functionaux2 RGTPAREN blockreturn
Rule 67    functionaux -> VOID
Rule 68    functionaux -> type
Rule 69    functionaux2 -> parameter
Rule 70    functionaux2 -> empty
Rule 71    vars -> type varsaux2 SEMICOLON
Rule 72    varsaux -> PLUS
Rule 73    varsaux -> MINUS
Rule 74    varsaux -> empty
Rule 75    varsaux2 -> ID EQUAL varsaux constant
Rule 76    varsaux2 -> ID EQUAL varsaux constant COMMA varsaux2
Rule 77    call -> ID LFTPAREN exp RGTPAREN SEMICOLON
Rule 78    call -> ID LFTPAREN exp COMMA call RGTPAREN SEMICOLON
Rule 79    read -> READ LFTPAREN ID RGTPAREN SEMICOLON
Rule 80    empty -> <empty>

Terminals, with rules where they appear

AND                  : 36
ARRAY                : 
BOOL                 : 63
CHAR                 : 62
COMMA                : 47 76 78
DIVISION             : 51
DOUBEQUAL            : 37
ELSE                 : 18
ELSEIF               : 19
EQUAL                : 6 7 75 76
FALSE                : 24
FLOAT                : 61
FUNCTION             : 66
GREATTHAN            : 42
GREATTHANEQUAL       : 41
ID                   : 1 5 8 21 46 47 66 75 76 77 78 79
IF                   : 17 18
INT                  : 60
LESSTHAN             : 43
LESSTHANEQUAL        : 40
LFTBRAC              : 1 10 11 14
LFTBRACSQR           : 5
LFTPAREN             : 19 20 31 44 45 66 77 78 79
MINUS                : 28 33 73
MULTIPLICATION       : 50
NOT                  : 38
OR                   : 39
PLUS                 : 27 32 72
PRINT                : 45
PRIOMH               : 65
PROGRAM              : 1
READ                 : 79
RETURN               : 11
RGTBRAC              : 1 10 11 14
RGTBRACSQR           : 5
RGTPAREN             : 19 20 31 44 45 66 77 78 79
SEMICOLON            : 6 7 11 45 71 77 78 79
STRING               : 64
TRUE                 : 23
VOID                 : 67
WHILE                : 44
WRITE                : 
error                : 

Nonterminals, with rules where they appear

array                : 9 22
assignment           : 53
assignmentaux        : 6 7
auxprogram           : 1 2 3
block                : 18 19 20 44 65
blockaux             : 14 15
blockreturn          : 66
blockreturnaux       : 10 11 12
call                 : 7 59 78
condition            : 54
conditionaux         : 17 18 19
constant             : 30 75 76
empty                : 4 13 16 29 48 52 70 74
exp                  : 5 11 27 28 34 35 45 77 78
expaux               : 26 27 28
expression           : 6 19 20 31 44
expressionaux        : 35
factor               : 49
factoraux            : 30
function             : 3
functionaux          : 66
functionaux2         : 66
loop                 : 56
main                 : 1
parameter            : 47 69
program              : 0
read                 : 58
statement            : 12 15
term                 : 25 26 50 51
termaux              : 49 50 51
type                 : 46 47 68 71
vars                 : 2 55
varsaux              : 75 76
varsaux2             : 71 76
write                : 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LFTBRAC auxprogram main RGTBRAC

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LFTBRAC auxprogram main RGTBRAC

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LFTBRAC auxprogram main RGTBRAC

    LFTBRAC         shift and go to state 4


state 4

    (1) program -> PROGRAM ID LFTBRAC . auxprogram main RGTBRAC
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> . empty
    (71) vars -> . type varsaux2 SEMICOLON
    (66) function -> . FUNCTION functionaux ID LFTPAREN functionaux2 RGTPAREN blockreturn
    (80) empty -> .
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING

    FUNCTION        shift and go to state 5
    PRIOMH          reduce using rule 80 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    function                       shift and go to state 11
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 8
    type                           shift and go to state 9
    empty                          shift and go to state 10

state 5

    (66) function -> FUNCTION . functionaux ID LFTPAREN functionaux2 RGTPAREN blockreturn
    (67) functionaux -> . VOID
    (68) functionaux -> . type
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING

    VOID            shift and go to state 16
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    functionaux                    shift and go to state 17
    type                           shift and go to state 18

state 6

    (2) auxprogram -> vars . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> . empty
    (71) vars -> . type varsaux2 SEMICOLON
    (66) function -> . FUNCTION functionaux ID LFTPAREN functionaux2 RGTPAREN blockreturn
    (80) empty -> .
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING

    FUNCTION        shift and go to state 5
    PRIOMH          reduce using rule 80 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    function                       shift and go to state 11
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 19
    type                           shift and go to state 9
    empty                          shift and go to state 10

state 7

    (62) type -> CHAR .

    ID              reduce using rule 62 (type -> CHAR .)


state 8

    (1) program -> PROGRAM ID LFTBRAC auxprogram . main RGTBRAC
    (65) main -> . PRIOMH block

    PRIOMH          shift and go to state 20

    main                           shift and go to state 21

state 9

    (71) vars -> type . varsaux2 SEMICOLON
    (75) varsaux2 -> . ID EQUAL varsaux constant
    (76) varsaux2 -> . ID EQUAL varsaux constant COMMA varsaux2

    ID              shift and go to state 23

    varsaux2                       shift and go to state 22

state 10

    (4) auxprogram -> empty .

    PRIOMH          reduce using rule 4 (auxprogram -> empty .)


state 11

    (3) auxprogram -> function . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> . empty
    (71) vars -> . type varsaux2 SEMICOLON
    (66) function -> . FUNCTION functionaux ID LFTPAREN functionaux2 RGTPAREN blockreturn
    (80) empty -> .
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING

    FUNCTION        shift and go to state 5
    PRIOMH          reduce using rule 80 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    function                       shift and go to state 11
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 24
    type                           shift and go to state 9
    empty                          shift and go to state 10

state 12

    (64) type -> STRING .

    ID              reduce using rule 64 (type -> STRING .)


state 13

    (60) type -> INT .

    ID              reduce using rule 60 (type -> INT .)


state 14

    (61) type -> FLOAT .

    ID              reduce using rule 61 (type -> FLOAT .)


state 15

    (63) type -> BOOL .

    ID              reduce using rule 63 (type -> BOOL .)


state 16

    (67) functionaux -> VOID .

    ID              reduce using rule 67 (functionaux -> VOID .)


state 17

    (66) function -> FUNCTION functionaux . ID LFTPAREN functionaux2 RGTPAREN blockreturn

    ID              shift and go to state 25


state 18

    (68) functionaux -> type .

    ID              reduce using rule 68 (functionaux -> type .)


state 19

    (2) auxprogram -> vars auxprogram .

    PRIOMH          reduce using rule 2 (auxprogram -> vars auxprogram .)


state 20

    (65) main -> PRIOMH . block
    (14) block -> . LFTBRAC blockaux RGTBRAC

    LFTBRAC         shift and go to state 26

    block                          shift and go to state 27

state 21

    (1) program -> PROGRAM ID LFTBRAC auxprogram main . RGTBRAC

    RGTBRAC         shift and go to state 28


state 22

    (71) vars -> type varsaux2 . SEMICOLON

    SEMICOLON       shift and go to state 29


state 23

    (75) varsaux2 -> ID . EQUAL varsaux constant
    (76) varsaux2 -> ID . EQUAL varsaux constant COMMA varsaux2

    EQUAL           shift and go to state 30


state 24

    (3) auxprogram -> function auxprogram .

    PRIOMH          reduce using rule 3 (auxprogram -> function auxprogram .)


state 25

    (66) function -> FUNCTION functionaux ID . LFTPAREN functionaux2 RGTPAREN blockreturn

    LFTPAREN        shift and go to state 31


state 26

    (14) block -> LFTBRAC . blockaux RGTBRAC
    (15) blockaux -> . statement blockaux
    (16) blockaux -> . empty
    (53) statement -> . assignment
    (54) statement -> . condition
    (55) statement -> . vars
    (56) statement -> . loop
    (57) statement -> . write
    (58) statement -> . read
    (59) statement -> . call
    (80) empty -> .
    (6) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (7) assignment -> . assignmentaux EQUAL call SEMICOLON
    (17) condition -> . IF conditionaux
    (18) condition -> . IF conditionaux ELSE block
    (71) vars -> . type varsaux2 SEMICOLON
    (44) loop -> . WHILE LFTPAREN expression RGTPAREN block
    (45) write -> . PRINT LFTPAREN exp RGTPAREN SEMICOLON
    (79) read -> . READ LFTPAREN ID RGTPAREN SEMICOLON
    (77) call -> . ID LFTPAREN exp RGTPAREN SEMICOLON
    (78) call -> . ID LFTPAREN exp COMMA call RGTPAREN SEMICOLON
    (8) assignmentaux -> . ID
    (9) assignmentaux -> . array
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 80 (empty -> .)
    IF              shift and go to state 47
    WHILE           shift and go to state 34
    PRINT           shift and go to state 35
    READ            shift and go to state 33
    ID              shift and go to state 45
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    type                           shift and go to state 9
    vars                           shift and go to state 32
    read                           shift and go to state 38
    assignment                     shift and go to state 43
    write                          shift and go to state 37
    assignmentaux                  shift and go to state 44
    call                           shift and go to state 39
    empty                          shift and go to state 41
    statement                      shift and go to state 40
    loop                           shift and go to state 48
    array                          shift and go to state 36
    condition                      shift and go to state 46
    blockaux                       shift and go to state 42

state 27

    (65) main -> PRIOMH block .

    RGTBRAC         reduce using rule 65 (main -> PRIOMH block .)


state 28

    (1) program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .

    $end            reduce using rule 1 (program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .)


state 29

    (71) vars -> type varsaux2 SEMICOLON .

    IF              reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    WHILE           reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    PRINT           reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    READ            reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    ID              reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    INT             reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    FLOAT           reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    CHAR            reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    BOOL            reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    STRING          reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    RGTBRAC         reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    FUNCTION        reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    PRIOMH          reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)
    RETURN          reduce using rule 71 (vars -> type varsaux2 SEMICOLON .)


state 30

    (75) varsaux2 -> ID EQUAL . varsaux constant
    (76) varsaux2 -> ID EQUAL . varsaux constant COMMA varsaux2
    (72) varsaux -> . PLUS
    (73) varsaux -> . MINUS
    (74) varsaux -> . empty
    (80) empty -> .

    PLUS            shift and go to state 50
    MINUS           shift and go to state 49
    ID              reduce using rule 80 (empty -> .)
    TRUE            reduce using rule 80 (empty -> .)
    FALSE           reduce using rule 80 (empty -> .)

    empty                          shift and go to state 51
    varsaux                        shift and go to state 52

state 31

    (66) function -> FUNCTION functionaux ID LFTPAREN . functionaux2 RGTPAREN blockreturn
    (69) functionaux2 -> . parameter
    (70) functionaux2 -> . empty
    (46) parameter -> . type ID
    (47) parameter -> . type ID COMMA parameter
    (48) parameter -> . empty
    (80) empty -> .
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING

    RGTPAREN        reduce using rule 80 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    type                           shift and go to state 53
    functionaux2                   shift and go to state 54
    parameter                      shift and go to state 55
    empty                          shift and go to state 56

state 32

    (55) statement -> vars .

    IF              reduce using rule 55 (statement -> vars .)
    WHILE           reduce using rule 55 (statement -> vars .)
    PRINT           reduce using rule 55 (statement -> vars .)
    READ            reduce using rule 55 (statement -> vars .)
    ID              reduce using rule 55 (statement -> vars .)
    INT             reduce using rule 55 (statement -> vars .)
    FLOAT           reduce using rule 55 (statement -> vars .)
    CHAR            reduce using rule 55 (statement -> vars .)
    BOOL            reduce using rule 55 (statement -> vars .)
    STRING          reduce using rule 55 (statement -> vars .)
    RGTBRAC         reduce using rule 55 (statement -> vars .)
    RETURN          reduce using rule 55 (statement -> vars .)


state 33

    (79) read -> READ . LFTPAREN ID RGTPAREN SEMICOLON

    LFTPAREN        shift and go to state 57


state 34

    (44) loop -> WHILE . LFTPAREN expression RGTPAREN block

    LFTPAREN        shift and go to state 58


state 35

    (45) write -> PRINT . LFTPAREN exp RGTPAREN SEMICOLON

    LFTPAREN        shift and go to state 59


state 36

    (9) assignmentaux -> array .

    EQUAL           reduce using rule 9 (assignmentaux -> array .)


state 37

    (57) statement -> write .

    IF              reduce using rule 57 (statement -> write .)
    WHILE           reduce using rule 57 (statement -> write .)
    PRINT           reduce using rule 57 (statement -> write .)
    READ            reduce using rule 57 (statement -> write .)
    ID              reduce using rule 57 (statement -> write .)
    INT             reduce using rule 57 (statement -> write .)
    FLOAT           reduce using rule 57 (statement -> write .)
    CHAR            reduce using rule 57 (statement -> write .)
    BOOL            reduce using rule 57 (statement -> write .)
    STRING          reduce using rule 57 (statement -> write .)
    RGTBRAC         reduce using rule 57 (statement -> write .)
    RETURN          reduce using rule 57 (statement -> write .)


state 38

    (58) statement -> read .

    IF              reduce using rule 58 (statement -> read .)
    WHILE           reduce using rule 58 (statement -> read .)
    PRINT           reduce using rule 58 (statement -> read .)
    READ            reduce using rule 58 (statement -> read .)
    ID              reduce using rule 58 (statement -> read .)
    INT             reduce using rule 58 (statement -> read .)
    FLOAT           reduce using rule 58 (statement -> read .)
    CHAR            reduce using rule 58 (statement -> read .)
    BOOL            reduce using rule 58 (statement -> read .)
    STRING          reduce using rule 58 (statement -> read .)
    RGTBRAC         reduce using rule 58 (statement -> read .)
    RETURN          reduce using rule 58 (statement -> read .)


state 39

    (59) statement -> call .

    IF              reduce using rule 59 (statement -> call .)
    WHILE           reduce using rule 59 (statement -> call .)
    PRINT           reduce using rule 59 (statement -> call .)
    READ            reduce using rule 59 (statement -> call .)
    ID              reduce using rule 59 (statement -> call .)
    INT             reduce using rule 59 (statement -> call .)
    FLOAT           reduce using rule 59 (statement -> call .)
    CHAR            reduce using rule 59 (statement -> call .)
    BOOL            reduce using rule 59 (statement -> call .)
    STRING          reduce using rule 59 (statement -> call .)
    RGTBRAC         reduce using rule 59 (statement -> call .)
    RETURN          reduce using rule 59 (statement -> call .)


state 40

    (15) blockaux -> statement . blockaux
    (15) blockaux -> . statement blockaux
    (16) blockaux -> . empty
    (53) statement -> . assignment
    (54) statement -> . condition
    (55) statement -> . vars
    (56) statement -> . loop
    (57) statement -> . write
    (58) statement -> . read
    (59) statement -> . call
    (80) empty -> .
    (6) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (7) assignment -> . assignmentaux EQUAL call SEMICOLON
    (17) condition -> . IF conditionaux
    (18) condition -> . IF conditionaux ELSE block
    (71) vars -> . type varsaux2 SEMICOLON
    (44) loop -> . WHILE LFTPAREN expression RGTPAREN block
    (45) write -> . PRINT LFTPAREN exp RGTPAREN SEMICOLON
    (79) read -> . READ LFTPAREN ID RGTPAREN SEMICOLON
    (77) call -> . ID LFTPAREN exp RGTPAREN SEMICOLON
    (78) call -> . ID LFTPAREN exp COMMA call RGTPAREN SEMICOLON
    (8) assignmentaux -> . ID
    (9) assignmentaux -> . array
    (60) type -> . INT
    (61) type -> . FLOAT
    (62) type -> . CHAR
    (63) type -> . BOOL
    (64) type -> . STRING
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 80 (empty -> .)
    IF              shift and go to state 47
    WHILE           shift and go to state 34
    PRINT           shift and go to state 35
    READ            shift and go to state 33
    ID              shift and go to state 45
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 12

    type                           shift and go to state 9
    vars                           shift and go to state 32
    read                           shift and go to state 38
    assignment                     shift and go to state 43
    write                          shift and go to state 37
    assignmentaux                  shift and go to state 44
    call                           shift and go to state 39
    empty                          shift and go to state 41
    statement                      shift and go to state 40
    loop                           shift and go to state 48
    array                          shift and go to state 36
    condition                      shift and go to state 46
    blockaux                       shift and go to state 60

state 41

    (16) blockaux -> empty .

    RGTBRAC         reduce using rule 16 (blockaux -> empty .)


state 42

    (14) block -> LFTBRAC blockaux . RGTBRAC

    RGTBRAC         shift and go to state 61


state 43

    (53) statement -> assignment .

    IF              reduce using rule 53 (statement -> assignment .)
    WHILE           reduce using rule 53 (statement -> assignment .)
    PRINT           reduce using rule 53 (statement -> assignment .)
    READ            reduce using rule 53 (statement -> assignment .)
    ID              reduce using rule 53 (statement -> assignment .)
    INT             reduce using rule 53 (statement -> assignment .)
    FLOAT           reduce using rule 53 (statement -> assignment .)
    CHAR            reduce using rule 53 (statement -> assignment .)
    BOOL            reduce using rule 53 (statement -> assignment .)
    STRING          reduce using rule 53 (statement -> assignment .)
    RGTBRAC         reduce using rule 53 (statement -> assignment .)
    RETURN          reduce using rule 53 (statement -> assignment .)


state 44

    (6) assignment -> assignmentaux . EQUAL expression SEMICOLON
    (7) assignment -> assignmentaux . EQUAL call SEMICOLON

    EQUAL           shift and go to state 62


state 45

    (77) call -> ID . LFTPAREN exp RGTPAREN SEMICOLON
    (78) call -> ID . LFTPAREN exp COMMA call RGTPAREN SEMICOLON
    (8) assignmentaux -> ID .
    (5) array -> ID . LFTBRACSQR exp RGTBRACSQR

    LFTPAREN        shift and go to state 63
    EQUAL           reduce using rule 8 (assignmentaux -> ID .)
    LFTBRACSQR      shift and go to state 64


state 46

    (54) statement -> condition .

    IF              reduce using rule 54 (statement -> condition .)
    WHILE           reduce using rule 54 (statement -> condition .)
    PRINT           reduce using rule 54 (statement -> condition .)
    READ            reduce using rule 54 (statement -> condition .)
    ID              reduce using rule 54 (statement -> condition .)
    INT             reduce using rule 54 (statement -> condition .)
    FLOAT           reduce using rule 54 (statement -> condition .)
    CHAR            reduce using rule 54 (statement -> condition .)
    BOOL            reduce using rule 54 (statement -> condition .)
    STRING          reduce using rule 54 (statement -> condition .)
    RGTBRAC         reduce using rule 54 (statement -> condition .)
    RETURN          reduce using rule 54 (statement -> condition .)


state 47

    (17) condition -> IF . conditionaux
    (18) condition -> IF . conditionaux ELSE block
    (19) conditionaux -> . LFTPAREN expression RGTPAREN block ELSEIF conditionaux
    (20) conditionaux -> . LFTPAREN expression RGTPAREN block

    LFTPAREN        shift and go to state 65

    conditionaux                   shift and go to state 66

state 48

    (56) statement -> loop .
